objects/ssot__RequiredSkill__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Required Skill Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedRecordId__c</fullName>
        <label>Related Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedRecordObject__c</fullName>
        <label>Related Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequiredSkill_SkillId_map_Skill_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequiredSkill_SkillId_map_Skill_Id_N_1</label>
        <referenceTo>ssot__Skill__dlm</referenceTo>
        <relationshipLabel>RequiredSkill_SkillId_map_Skill_Id_N_1</relationshipLabel>
        <relationshipName>RequiredSkill_SkillId_map_Skill_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__SkillId__c</fullName>
        <label>Skill</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SkillLevelNumber__c</fullName>
        <label>Skill Level</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SkillPriorityNumber__c</fullName>
        <label>Skill Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1737626581688_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequiredSkill_LastModifiedById_map_U_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>RequiredSkill_LastModifiedById_map_U_rel</relationshipLabel>
        <relationshipName>rel_1737626581688_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1737626583875_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequiredSkill_CreatedById_map_User_I_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>RequiredSkill_CreatedById_map_User_I_rel</relationshipLabel>
        <relationshipName>rel_1737626583875_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1741334704942_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequiredSkill_RelatedRecordId_map_Wo_rel</label>
        <referenceTo>ssot__WorkOrder__dlm</referenceTo>
        <relationshipLabel>RequiredSkill_RelatedRecordId_map_Wo_rel</relationshipLabel>
        <relationshipName>rel_1741334704942_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>